--- a/style.css
+++ b/style.css
@@ -1,21 +1,45 @@
 table, th, td {
-    border:1px solid black;
-    width: 500px;
-    font-family: 'Courier New', Courier, monospace;
-}
-
-th{
-    font-size: 20px;
-    
+    border:1px solid #15722f;
+    width: auto;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 30px;
 }
 td{
-    font-size: 15px;
+    font-size: 20px;
     text-align: center;
 }
 .container{
     display: flex;
+    flex-direction: column;
     height: 100vh;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: flex-start;
+    align-items: center;
     margin-top: 50px;
+}
+.show-form-button, .add-book-button{
+    margin: 20px;
+    background-color: #2ea44f;
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+}
+.book-form{
+    border: 1px solid black;
+    padding: 15px;
+    text-align: center;
+}
+.book-form input{
+    margin: 10px;
+}
+.add-book-button{
+    padding: 12px;
+    margin: 15px auto 10px auto;
+    text-align: center;
 }
