--- a/style.css
+++ b/style.css
@@ -43,3 +43,15 @@ td{
     margin: 15px auto 10px auto;
     text-align: center;
 }
+.deleteButton{
+    width: 50px;
+    height: 100%;
+    background-color: #df3d3d;
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    line-height: 20px;
+}
