--- a/style.css
+++ b/style.css
@@ -1,24 +1,34 @@
 table, th, td {
     border:1px solid #15722f;
     width: auto;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 30px;
+    font-size: 1.8rem;
+}
+th{
+    padding: 10px;
+    line-height: 40px;
 }
 td{
-    font-size: 20px;
+    font-size: 1.2rem;
     text-align: center;
+    padding: 8px;
+}
+body{
+    background-color: #DDD6FE;
 }
 .container{
+    width: 60vw;
+    margin: auto;
     display: flex;
     flex-direction: column;
     height: 100vh;
-    justify-content: flex-start;
     align-items: center;
-    margin-top: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #C4B5FD;
+    border: 1px solid rgba(27, 31, 35, .15);
 }
 .show-form-button, .add-book-button{
     margin: 20px;
-    background-color: #2ea44f;
+    background-color: #A855F7;
     border: 1px solid rgba(27, 31, 35, .15);
     border-radius: 6px;
     box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
@@ -37,16 +47,17 @@ td{
 }
 .book-form input{
     margin: 10px;
+    background-color: #dbd4f8;
 }
 .add-book-button{
     padding: 12px;
     margin: 15px auto 10px auto;
     text-align: center;
 }
-.deleteButton{
+.deleteButton, .not-read-button, .read-button{
     width: 50px;
     height: 100%;
-    background-color: #df3d3d;
+    background-color: #b92727;
     border: 1px solid rgba(27, 31, 35, .15);
     border-radius: 6px;
     box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
@@ -54,4 +65,11 @@ td{
     color: #fff;
     cursor: pointer;
     line-height: 20px;
+}
+.read-button{
+    background-color: #0e6b0e;
+}
+#error-heading{
+    color: #122da8;
+    font-style: italic;
 }
