--- a/style.css
+++ b/style.css
@@ -1,44 +1,30 @@
-table, th, td {
-    border:1px solid #15722f;
-    width: auto;
-    font-size: 1.8rem;
-}
-th{
-    padding: 10px;
-    line-height: 40px;
-}
-td{
-    font-size: 1.2rem;
-    text-align: center;
-    padding: 8px;
-}
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100);
+
 body{
-    background-color: #DDD6FE;
+    background-color: #3e94ec;
+    font-family: "Roboto", helvetica, arial, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
 }
+
 .container{
-    width: 60vw;
-    margin: auto;
     display: flex;
     flex-direction: column;
-    height: 100vh;
     align-items: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: #C4B5FD;
-    border: 1px solid rgba(27, 31, 35, .15);
 }
 .show-form-button, .add-book-button{
     margin: 20px;
-    background-color: #A855F7;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 1px 0;
     border: 1px solid rgba(27, 31, 35, .15);
     border-radius: 6px;
-    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
     box-sizing: border-box;
-    color: #fff;
+    padding: 6px 16px;
+    background-color: #260db4;
     cursor: pointer;
     font-size: 14px;
-    font-weight: 600;
     line-height: 20px;
-    padding: 6px 16px;
+    font-weight: 600;
+    color: #fff;
 }
 .book-form{
     border: 1px solid black;
@@ -70,6 +56,45 @@ body{
     background-color: #0e6b0e;
 }
 #error-heading{
-    color: #122da8;
-    font-style: italic;
+    color: #260db4;
 }
+/*** Table Styles **/
+
+th {
+  color:#D5DDE5;;
+  background:#1b1e24;
+  border-bottom:4px solid #9ea7af;
+  border-right: 1px solid #343a45;
+  font-size:23px;
+  font-weight: 100;
+  padding:24px;
+  text-align:left;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  vertical-align:middle;
+}
+tr {
+  border-top: 1px solid #C1C3D1;
+  border-bottom: 1px solid #C1C3D1;
+  color:#666B85;
+  font-size:16px;
+  font-weight:normal;
+  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+}
+ 
+tr:hover td {
+  background:#4E5066;
+  color:#FFFFFF;
+  border-top: 1px solid #22262e;
+}
+ 
+td {
+  background:#FFFFFF;
+  padding:20px;
+  text-align: center;
+  vertical-align: middle;
+  font-weight:300;
+  font-size:18px;
+  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+  border-right: 1px solid #C1C3D1;
+}
+
